--- a/raceconsumer/build.gradle
+++ b/raceconsumer/build.gradle
@@ -31,6 +31,7 @@ dependencies {
     testImplementation 'org.springframework.amqp:spring-rabbit-test'
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:rabbitmq'
+    implementation project(':clients')
 }
 
 tasks.named('test') {
