--- a/raceproducer/build.gradle
+++ b/raceproducer/build.gradle
@@ -34,6 +34,7 @@ dependencies {
 	testImplementation 'org.springframework.amqp:spring-rabbit-test'
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:rabbitmq'
+	implementation project(':clients')
 }
 
 tasks.named('test') {
