--- a/raceconsumer/build.gradle
+++ b/raceconsumer/build.gradle
@@ -32,6 +32,7 @@ dependencies {
     testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.testcontainers:rabbitmq'
     implementation project(':clients')
+    implementation project(':amqp')
 }
 
 tasks.named('test') {
