--- a/raceproducer/build.gradle
+++ b/raceproducer/build.gradle
@@ -35,6 +35,7 @@ dependencies {
 	testImplementation 'org.testcontainers:junit-jupiter'
 	testImplementation 'org.testcontainers:rabbitmq'
 	implementation project(':clients')
+	implementation project(':amqp')
 }
 
 tasks.named('test') {
