--- a/raceproducer/src/main/resources/application.yaml
+++ b/raceproducer/src/main/resources/application.yaml
@@ -1,11 +1,20 @@
 spring:
   application:
     name: raceproducer
+  datasource:
+    url: jdbc:postgresql://localhost:5432/trailblazer
+    username: trailblazer
+    password: secret
   rabbitmq:
     username: trailblazer
     password: secret
     host: localhost
     port: 5672
+  jpa:
+    hibernate:
+      ddl-auto: validate
+  flyway:
+    enabled: true
 
 rabbitmq:
     queue:
