--- a/raceproducer/build.gradle
+++ b/raceproducer/build.gradle
@@ -23,7 +23,7 @@ repositories {
 
 dependencies {
 
-
+	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-amqp'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -41,6 +41,8 @@ dependencies {
 	testImplementation 'org.testcontainers:rabbitmq'
 	implementation project(':clients')
 	implementation project(':amqp')
+//	runtimeOnly 'org.postgresql:postgresql'
+	implementation 'org.postgresql:postgresql:42.7.3'
 }
 
 tasks.named('test') {
