create race view and consume events from queue

--- a/raceconsumer/src/main/resources/application.yaml
+++ b/raceconsumer/src/main/resources/application.yaml
@@ -1,11 +1,18 @@
 spring:
   application:
     name: raceconsumer
+  datasource:
+    url: jdbc:postgresql://localhost:5432/trailblazer
+    username: trailblazer
+    password: secret
   rabbitmq:
     username: trailblazer
     password: secret
     host: localhost
     port: 5672
+  jpa:
+    hibernate:
+      ddl-auto: none
 
 rabbitmq:
   queue:
