--- a/compose.yaml
+++ b/compose.yaml
@@ -15,3 +15,14 @@ services:
     ports:
       - '5672:5672'
       - '15672:15672'
+  keycloak:
+    image: 'keycloak/keycloak:latest'
+    ports:
+      - 8090:8080
+    environment:
+      KEYCLOAK_ADMIN: admin
+      KEYCLOAK_ADMIN_PASSWORD: admin
+    command: ['start-dev', '--import-realm']
+    volumes:
+      - ./keycloak:/tmp/keycloak
+      - ./keycloak/realms:/opt/keycloak/data/import
