--- a/raceproducer/src/main/resources/application.yaml
+++ b/raceproducer/src/main/resources/application.yaml
@@ -1,6 +1,11 @@
 spring:
   application:
     name: raceproducer
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: http://localhost:8090/realms/trailblazer
   datasource:
     url: jdbc:postgresql://localhost:5432/trailblazer
     username: trailblazer
