--- a/compose.yaml
+++ b/compose.yaml
@@ -1,6 +1,6 @@
 services:
   postgres:
-    image: 'postgres:latest'
+    image: 'postgres:16.2'
     environment:
       - 'POSTGRES_DB=trailblazer'
       - 'POSTGRES_PASSWORD=secret'
@@ -8,7 +8,7 @@ services:
     ports:
       - '5432:5432'
   rabbitmq:
-    image: 'rabbitmq:management'
+    image: 'rabbitmq:3.13.2-management'
     environment:
       - 'RABBITMQ_DEFAULT_PASS=secret'
       - 'RABBITMQ_DEFAULT_USER=trailblazer'
@@ -16,7 +16,7 @@ services:
       - '5672:5672'
       - '15672:15672'
   keycloak:
-    image: 'keycloak/keycloak:latest'
+    image: 'keycloak/keycloak:24.0'
     ports:
       - 8090:8080
     environment:
