--- a/compose.yaml
+++ b/compose.yaml
@@ -1,4 +1,20 @@
 services:
+  race-producer:
+    image: raceproducer:0.0.1-SNAPSHOT
+    environment:
+      - 'SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_trailblazer_producer_db:5432/trailblazer'
+      - 'SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI=http://keycloak:8080/realms/trailblazer'
+      - 'LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY=DEBUG'
+    ports:
+      - '8081:8080'
+  race-consumer:
+    image: raceconsumer:0.0.1-SNAPSHOT
+    environment:
+      - 'SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_trailblazer_consumer_db:5432/trailblazer'
+      - 'SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI=http://keycloak:8080/realms/trailblazer'
+      - 'LOGGING_LEVEL_ORG_SPRINGFRAMEWORK_SECURITY=DEBUG'
+    ports:
+      - '8082:8080'
   postgres_trailblazer_producer_db:
     image: 'postgres:16.2'
     environment:
