--- a/compose.yaml
+++ b/compose.yaml
@@ -14,7 +14,7 @@ services:
       - 'SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI=http://keycloak:8080/realms/trailblazer'
       - 'SPRING_RABBITMQ_HOST=rabbitmq'
     ports:
-      - '8082:8080'
+      - '8082:8081'
   postgres_trailblazer_producer_db:
     image: 'postgres:16.2'
     environment:
@@ -42,11 +42,11 @@ services:
   keycloak:
     image: 'keycloak/keycloak:24.0'
     ports:
-      - 8090:8080
+      - '8080:8080'
     environment:
       KEYCLOAK_ADMIN: admin
       KEYCLOAK_ADMIN_PASSWORD: admin
-    command: ['start-dev', '--import-realm']
+    command: ['start-dev', '--import-realm', '--hostname=keycloak']
     volumes:
       - ./keycloak:/tmp/keycloak
       - ./keycloak/realms:/opt/keycloak/data/import
