--- a/compose.yaml
+++ b/compose.yaml
@@ -1,20 +1,28 @@
 services:
   race-producer:
     image: raceproducer:0.0.1-SNAPSHOT
+    depends_on:
+      - keycloak
+      - postgres_trailblazer_producer_db
+      - rabbitmq
     environment:
       - 'SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_trailblazer_producer_db:5432/trailblazer'
       - 'SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI=http://keycloak:8080/realms/trailblazer'
       - 'SPRING_RABBITMQ_HOST=rabbitmq'
     ports:
-      - '8081:8080'
+      - '8081:8081'
   race-consumer:
     image: raceconsumer:0.0.1-SNAPSHOT
+    depends_on:
+      - rabbitmq
+      - keycloak
+      - postgres_trailblazer_consumer_db
     environment:
       - 'SPRING_DATASOURCE_URL=jdbc:postgresql://postgres_trailblazer_consumer_db:5432/trailblazer'
       - 'SPRING_SECURITY_OAUTH2_RESOURCESERVER_JWT_ISSUER-URI=http://keycloak:8080/realms/trailblazer'
       - 'SPRING_RABBITMQ_HOST=rabbitmq'
     ports:
-      - '8082:8081'
+      - '8082:8082'
   postgres_trailblazer_producer_db:
     image: 'postgres:16.2'
     environment:
